web/css/bach.css
/* ... */
.formBasket, .formSearch {
    display: inline-block;
}

#formBasketDeleteAll {
    padding-top: 1em;
    padding-left: 0.5em;
}

#exportBasket, #importBasket,
#exportSearchHisto, #importSearchHisto{
    background:none!important;
    border:none;
    padding:0!important;
    font: inherit;
    /*border is optional*/
    border-bottom:1px solid #444; 
    cursor: pointer;
}

.cMedia {
    background-image: url(../img/glyphicons-halflings.png);
    background-position: -96px -115px;
    background-repeat: no-repeat;
    height: 14px;
    line-height: 14px;
    margin-left: 5px;
    width: 14px;
    padding-bottom: 0;
    padding-left: 0.6em;
    padding-right: 0.6em;
}

#change_view > .printLink {
    margin-top: 3px;
}

ul.legalsList {
    list-style: initial;
    list-style-position: inside;
    padding-left: 20px;
}

.intro strong {
    font-weight: bold;
}

/* Mobile view */
@media ( max-width : 767px) {
    /** Reset widths and heights */
    html, body, [id=wrapper], [id=menu] {
        height: auto;
        width: auto;
    }

    body {
        background-image: none;
        min-width: 0;
        min-height: 0;
    }

    .header {
        margin: 0;
    }

    [id=navigation] {
        position: relative;
        margin:0;
    }

    [id=navigation]:after {
        content: "\2261"; /* unicode "burger" */
        /*position: absolute;
        top: -0.15em;
        right: 0;*/
        width: 0.8em;
        text-align: center;
        font-size: 2.5em;
        font-weight: bold;
        line-height: 0.5;
        cursor: pointer;
    }

    .header, .header h1, [id=navigation], [id=navigation] a, [id=navigation] li {
        display: block;
    }

    [id=navigation] a {
        padding: .4em 1em;
    }

    [id=container] {
        padding: 0 .2em;
    }

    [id=wrapper] {
        margin-left: 0;
        padding: 0;
    }

    [id=menu] {
        float: none;
        position: relative;
        margin: 0;
    }

    [id="search"] input[type="text"] {
        min-width: 5em;
    }

    .access {
        position: relative;
        top:0;
    }

    .no-image {
        display: none;
    }

    [id="search_results"] article > div {
        margin-left: 0;
    }

    [id=active_filters] ul, [id="active_filters"] li, [id="active_filters"] a {
        display: block;
    }

    [id=user_login] {
        position: relative;
    }

    .results_count {
        padding-top: 0;
        padding-right: 0;
        height: 50px;
    }

    [id=result_span] {
        display: block;
        left: 10px;
        padding-top: 0;
        padding-right: 0px;
        padding-left: 0px;
        position: relative;
        top:0;
        width: 100%;
        text-align: center;
    }

    [id=change_view] {
        display: block;
        position: relative;
        text-align: center;
    }

    .ui-rangeSlider {
        margin: 0 2em;
    }

    /** Do not work in mobile mode */
    #dates_plot {
        display: none;
    }

    [id=social] {
        float: none;
        margin-top: 0;
    }

    [id=social] .button {
        float: none;
    }

    #container .ui-tabs .ui-tabs-nav li {
        margin-top: 0;
    }

    #container .ui-tabs .ui-tabs-nav li a {
        padding: .2em .5em;
    }

    #container .ui-tabs .ui-tabs-panel {
        padding: .3em 0 0;
    }

    h2, h3, h4, h5, h6 {
        margin: .4em 0 .2em;
    }

    #loading p {
        width: 90%;
        margin-left: 5%;
    }

    .fb_iframe_widget > span {
        vertical-align: baseline!important;
    }

    #back2top {
        bottom: 6px;
        right: 46px;
    }

    #footer_wrapper {
        position: static;
        left: 0;
        bottom: 0px;
        background-color: #d1c6c0;
        width: 100%;
        min-height: 20px;
        margin-top:10;%
        height: 15%;
    }
}

